allow guitarpick and selection draggers to overflow on edge of timeline, prevent data bar overflow with change in clip path syntax

--- a/web/css/timeline.css
+++ b/web/css/timeline.css
@@ -390,11 +390,11 @@ g.plot rect.data-bar-invisible {
 }
 
 #timeline-footer svg {
+  overflow: visible;
   margin-top: -16px;
 }
 
 #timeline-footer > svg {
-  overflow-y: hidden;
   margin-top: -23px;
 }
 
